2003-05-19  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sntp.c: Added support for IPv6 multicast NTP packets.

2003-04-09  Michael Checky  <Michael_Checky@Thermoking.com>

	* src/sntp.c: In function sntp_fn() changed 'version' to
	'new_srv.version' in the CYG_TRACE1() call.

2003-02-25  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/sntp.h: Include <cyg/infra/cyg_type.h> for __externC.

2003-02-25  Gary Thomas  <gary@mlbassoc.com>

	* tests/sntp1.c (net_test): Strip the trailing "\n" making it more
	  readable.
	
2003-02-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* doc/sntp.sgml: Added license banner and added missing </para>
	* include/sntp.h (cyg_sntp_start): C++ safe
	* cdl/sntp.cdl: Stricture requirements and same description as in
  	  ecos.db.  Only build the test if CYGPKH_NET_BUILD_HW_TESTS
	* tests/sntp1.c (net_test): Check we have the required
	  packages. Require the time to be within 90 days of the build
	  date of the test
		
	
2003-02-16  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sntp.c: First import of SNTP client code.
	* include/sntp.c: Ditto
	* test/sntp1.c: Ditto
	* cdl/sntp.cdl: Ditto
	* doc/sntp.sgml: Ditto

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 2003 Andrew Lunn
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along